apps/base/sample-app/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sample-app
  labels:
    deployment: sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
        version: v1
    spec:
      containers:
        - name: sample-app
          ports:
            - containerPort: 8080
              protocol: TCP
