apps/base/sample-app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sample-app
  labels:
    service: sample-app
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: sample-app
