apps/base/sample-app/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: sample-app
  labels:
    route: sample-app
spec:
  to:
    kind: Service
    name: sample-app
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
  tls:
    termination: edge
